<resources>
    <string name="app_name">LlunaPlenaFnsb</string>

    <string name="apiKey_blogger">AIzaSyCubmwqlXI4uiVWQzQxC9LQRbyesItw0Ms</string>
    <string name="main_title">Lluna Plena</string>
    <string name="blog_url">https://www.googleapis.com/</string>

    <string name="home">Portada</string>
    <string name="config">Configuració</string>

    <string name="about">Sobre el fansub</string>
    <string name="developer">Desenvolupador(a)</string>
    <string name="forum">Fòrum</string>

    <string name="search">Buscar</string>
    <string name="search_hint">Buscar&#8230;</string>
    <string name="check_updates">Comprovar actualitzacions</string>

    <string name="rini">Rini</string>

    <string name="loading">Carregant&#8230;</string>
    <string name="wait">Un moment, si us plau</string>

    <string name="forum_url">https://llunaplenanofansub.forosactivos.net</string>

    <string name="error_connection">Error de connexió!</string>
    <string name="retry">Reintentar</string>
    <string name="error">Hi ha hagut un error</string>
    <string name="no_results">No s\'han trobat resultats</string>

    <string name="load_more">Carregar més entrades</string>
    <string name="profile_of">Perfil de: </string>
    <string name="published_by">Publicat per:</string>

    <string name="Lorem_Ipsum">
Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer lectus urna, malesuada id dui et, gravida fermentum lorem. Quisque ultrices justo et nisl maximus efficitur. Vivamus malesuada vulputate molestie. Quisque rhoncus dolor nunc, sit amet aliquet sem blandit vitae. Praesent eu ipsum eu lorem gravida sagittis et id justo. Nulla ornare posuere laoreet. Nullam nulla mi, dapibus eu maximus in, vulputate et magna. Sed egestas risus et risus commodo, a interdum massa convallis. Cras suscipit justo eget diam dapibus, eu fringilla metus sodales.

Mauris consequat tincidunt orci, sit amet pretium magna vehicula sit amet. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse ultricies risus nec mollis tristique. Ut varius turpis eu enim sollicitudin, elementum iaculis nunc aliquet. Proin ante dui, faucibus et magna in, viverra vestibulum erat. Fusce nisi metus, ornare vel vehicula dapibus, porta ac massa. Donec id finibus orci, eu cursus felis. </string>
</resources>
