<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/drawer_home"
            android:checked="true"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home"/>

        <item
            android:id="@+id/drawer_search"
            android:icon="@drawable/ic_search_black_18dp"
            android:title="@string/search"/>

        <item
            android:id="@+id/drawer_config"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/config"/>

    </group>

    <group
        android:id="@+id/nav_footer"
        android:checkableBehavior="single">

        <item
            android:id="@+id/drawer_about"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="@string/about"/>

        <item
            android:id="@+id/drawer_dev"
            android:icon="@drawable/ic_code_black_24dp"
            android:title="@string/developer"/>
    </group>

</menu>